src/test/deca/context/valid/thibault/optimisation/testOpt6.deca
{
	boolean b=true;
        boolean a=true;
	int c, d;

	
	
	if(a==true){
			print("b est vrai");
			}
}
