src/test/deca/context/invalid/pierre/print-arguments.deca
{
    int daijoubu = 1;
    print("oui");
    println(2);
    print(daijoubu);
    println(0.555);
    print(true);
}
    